// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`symbol-references — list row rendering > given a cm command error > renders empty list when cm fails 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Callers (0/0)[0m                            [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                                            [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[38;2;255;98;140m Error: cm cm failed: Symbol not found[0m    [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+e edit[0m                                                                                                   [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbol-references — list row rendering > given a long results list > renders scrollable rows with consistent padding 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m References (20/20)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/components/files/files.ts[0m                          [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰊕 createFilesComponent [38;2;76;62;118magent/extensions/i[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Component } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-tui"[39m[38;2;225;228;232m;[39m[39m[0m                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createSymbolsComponent [38;2;76;62;118magent/extensions[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131minterface[39m[38;2;225;228;232m [39m[38;2;179;146;240mStubItem[39m[38;2;225;228;232m {[39m[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createBookmarksComponent [38;2;76;62;118magent/extensio[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mid[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createTodosComponent [38;2;76;62;118magent/extensions/i[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mlabel[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createListPicker [38;2;76;62;118magent/extensions/ide/l[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}[39m[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 formatSymbolListEntry [38;2;76;62;118magent/extensions/[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 querySymbols [38;2;76;62;118magent/extensions/ide/compo[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 loadFilePreviewWithShiki [38;2;76;62;118magent/extensio[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createFilePreviewLoader [38;2;76;62;118magent/extension[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 openEditor [38;2;76;62;118magent/extensions/ide/lib/edi[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 getFileIcon [38;2;76;62;118magent/extensions/ide/lib/fi[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 highlightCodeLines [38;2;76;62;118magent/extensions/ide[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createSplitPanel [38;2;76;62;118magent/extensions/ide/l[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 renderBorder [38;2;76;62;118magent/extensions/ide/lib/s[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 calculateGraphLayout [38;2;76;62;118magent/extensions/i[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 buildGraphInput [38;2;76;62;118magent/extensions/ide/co[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createMockPi [38;2;76;62;118magent/extensions/ide/lib/t[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createMockTui [38;2;76;62;118magent/extensions/ide/lib/[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createMockTheme [38;2;76;62;118magent/extensions/ide/li[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 matchesKey [38;2;76;62;118mnode_modules/@earendil-works[39m[38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+j callees  ctrl+y types  ctrl+k schema[0m                       [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbol-references — list row rendering > given callees results > renders callee symbols with consistent padding 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Callees (3/3)[0m                            [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/components/symbols/helpers.ts[0m                      [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰊕 querySymbols [38;2;76;62;118magent/extensions/ide/compo[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Component } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-tui"[39m[38;2;225;228;232m;[39m[39m[0m                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 formatSymbolListEntry [38;2;76;62;118magent/extensions/[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131minterface[39m[38;2;225;228;232m [39m[38;2;179;146;240mStubItem[39m[38;2;225;228;232m {[39m[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 loadFilePreviewWithShiki [38;2;76;62;118magent/extensio[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mid[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mlabel[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}[39m[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+j callees  ctrl+y types  ctrl+k schema[0m                       [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbol-references — list row rendering > given callers results > renders caller symbols with file paths and line numbers 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Callers (3/3)[0m                            [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/components/files/files.ts[0m                          [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰊕 createFilesComponent [38;2;76;62;118magent/extensions/i[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Component } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-tui"[39m[38;2;225;228;232m;[39m[39m[0m                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createSymbolsComponent [38;2;76;62;118magent/extensions[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131minterface[39m[38;2;225;228;232m [39m[38;2;179;146;240mStubItem[39m[38;2;225;228;232m {[39m[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createListPicker [38;2;76;62;118magent/extensions/ide/l[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mid[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mlabel[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}[39m[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+j callees  ctrl+y types  ctrl+k schema[0m                       [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbol-references — list row rendering > given empty results > renders the no items message 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Callers (0/0)[0m                            [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                                            [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[38;2;76;62;118m No items found[0m                           [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+e edit[0m                                                                                                   [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbol-references — list row rendering > given schema results > renders schema fields with consistent padding 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Schema (4/4)[0m                             [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/components/files/files.ts[0m                          [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰊕 pi [38;2;76;62;118magent/extensions/ide/components/file[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Component } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-tui"[39m[38;2;225;228;232m;[39m[39m[0m                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 tui [38;2;76;62;118magent/extensions/ide/components/fil[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131minterface[39m[38;2;225;228;232m [39m[38;2;179;146;240mStubItem[39m[38;2;225;228;232m {[39m[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 theme [38;2;76;62;118magent/extensions/ide/components/f[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mid[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 ctx [38;2;76;62;118magent/extensions/ide/components/fil[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mlabel[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}[39m[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+j callees  ctrl+y types  ctrl+k schema[0m                       [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbol-references — list row rendering > given types results > renders type references with definitions 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Types (3/3)[0m                              [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/lib/list-picker.ts[0m                                 [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰈚 ListPickerComponent [38;2;76;62;118magent/extensions/id[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Component } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@earendil-works/pi-tui"[39m[38;2;225;228;232m;[39m[39m[0m                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰈚 SymbolResult [38;2;76;62;118magent/extensions/ide/compo[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131minterface[39m[38;2;225;228;232m [39m[38;2;179;146;240mStubItem[39m[38;2;225;228;232m {[39m[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰈚 FileResult [38;2;76;62;118magent/extensions/ide/compone[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mid[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mlabel[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}[39m[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+j callees  ctrl+y types  ctrl+k schema[0m                       [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;
